--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WESOŁYCH ŚWIĄT</title>
-    <link rel="stylesheet" href="strona_wyglad.css">
+    <link rel="stylesheet" href="style.css">
      <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -17,19 +17,19 @@
                 </button>
         </div>
         <div class="lewy-dolny"> 
-            <img src="C:\Users\malgo\Documents\moj%20projekt\obrazy\choinka.png"
+            <img src="images\choinka.png"
                 width="200" 
                 height="300"
                 class="responsywny-obrazek">
             </div>
                 <div class="prawy-dolny">
-                <img src="C:\Users\malgo\Documents\moj%20projekt\obrazy\santa.png"
+                <img src="images\santa.png"
                 width="300" 
                 height="200"
                 class="responsywny-obrazek">
                 </div>
                 <div class="nad-przyciskiem">
-                    <img src="C:\Users\malgo\Documents\moj%20projekt\obrazy\prezenty.png"
+                    <img src="images\prezenty.png"
                     width="300"
                     height="150"
                     class="responsywny-obrazek">
@@ -46,7 +46,7 @@
              <div class="karty-container">
                 <div class="karta">
                     <div class="karta-obraz"></div>
-                    <img src="C:\Users\malgo\Documents\moj projekt\obrazy\swiatla.png">
+                    <img src="images\swiatla.png">
                     <h2>Ho Ho Ho!</h2>
                     <p>Niech te Święta będą pełne ciepła, miłości i smaku - zarówno w sercu, jak i w kieliszku. Wesołych i radosnych chwil przy świątecznym stole!</p>
                 </div>
