--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+    <div class="mobile-container">
     <section id="sekcja-startowa" class="sekcja aktywna">
         <div class="container">
             <p class="opis">Kliknij przycisk, aby otworzyć prezent</p>
@@ -16,25 +17,11 @@
                     <span class="tekst-przycisku">WESOŁYCH ŚWIĄT!</span>
                 </button>
         </div>
-        <div class="lewy-dolny"> 
-            <img src="images\choinka.png"
-                width="200" 
-                height="300"
-                class="responsywny-obrazek">
-            </div>
-                <div class="prawy-dolny">
-                <img src="images\santa.png"
-                width="300" 
-                height="200"
-                class="responsywny-obrazek">
-                </div>
-                <div class="nad-przyciskiem">
-                    <img src="images\prezenty.png"
-                    width="300"
-                    height="150"
-                    class="responsywny-obrazek">
-                </div>
-        
+        <div class="zdjecia-dekoracyjne">
+            <img src="images/choinka.png" class="lewy-dolny">
+            <img src="images/santa.png" class="prawy-dolny">
+            <img src="images/prezenty.png" class="nad-przyciskiem">
+        </div>
     </section>
     
      <section id="sekcja-druga" class="sekcja ukryta">
@@ -161,7 +148,7 @@ window.addEventListener('load', function() {
     });
 });
 
-
-</script>
+    </script>
+    </div>
 </body>
 </html>
