--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <div class="mobile-container">
     <section id="sekcja-startowa" class="sekcja aktywna">
         <div class="container">
-            <p class="opis">Kliknij przycisk, aby otworzyć prezent</p>
+            <h1>
+                <div class="tekst-nad-przyciskiem">
+                Kliknij przycisk, aby otworzyć prezent
+                </div>
+            </h1>
                 <button id="glowny-przycisk" class="duzy-przycisk">
                     <span class="tekst-przycisku">WESOŁYCH ŚWIĄT!</span>
                 </button>
