--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section id="sekcja-startowa" class="sekcja aktywna">
         <div class="container">
             <h1>
-                <div class="tekst-nad-przyciskiem">
+                <div class="opis">
                 Kliknij przycisk, aby otworzyć prezent
                 </div>
             </h1>
