--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@ glownyPrzycisk.addEventListener('click', function() {
         sekcjaDruga.classList.remove('ukryta');
         sekcjaDruga.style.transform = 'translateY(0)';
         /*document.body.style.overflow = 'auto';*/
-        document.documentElement.style.overflow = 'auto';
+        /*document.documentElement.style.overflow = 'auto';
         document.body.style.overflow = 'auto';
-        document.body.style.height = 'auto';
+        document.body.style.height = 'auto';*/
         // Dodaj płynne pojawianie się
         setTimeout(() => {
             sekcjaDruga.style.opacity = '1';
