--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
                     <p>Niech te Święta będą pełne ciepła, miłości i smaku - zarówno w sercu, jak i w kieliszku. Wesołych i radosnych chwil przy świątecznym stole!</p>
                 </div>
         </div>
+        <div class="karty-container">
+            <div class="karta">
+                <p>jakis tekst</p>
+            </div>
+        </div>
      </section>
     <script>
     // TWORZENIE ŚNIEŻEK
