--- a/index.html
+++ b/index.html
@@ -16,7 +16,17 @@
                     <span class="tekst-przycisku">WESOŁYCH ŚWIĄT!</span>
                 </button>
         </div>
-        <div class="lewy-dolny"> 
+        <div class="dolna-sekcja">
+            <img src="images\choinka.png"
+                width="170" 
+                height="230"
+                class="lewy-dolny">
+                <img src="images\santa.png"
+                width="215" 
+                height="150"
+                class="prawy-dolny">
+        </div>
+        <!-- <div class="lewy-dolny"> 
             <img src="images\choinka.png"
                 width="170" 
                 height="230"
@@ -27,7 +37,7 @@
                 width="215" 
                 height="150"
                 class="responsywny-obrazek">
-                </div>
+                </div> -->
                 <div class="nad-przyciskiem">
                     <img src="images\prezenty.png"
                     width="300"
