--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="instrukcja">Kliknij, aby przełamać opłatek</div>
                 </div>
     <div style="text-align: center; margin-top: 20px;">
-        <button onclick="location.reload()" class="btn-again">Nowe życzenia</button>
+        <button onclick="window.scrollTo(0,0); location.reload();" class="btn-again">Nowe życzenia</button>
     </div>
         </div>
      </section>
